cabal-version: 2.2
name: json-tokenize
version: 0.1.0.0
synopsis: Tokenize JSON
description: Convert JSON to a token stream.
homepage: https://github.com/andrewthad/json-tokenize
bug-reports: https://github.com/andrewthad/json-tokenize/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.Json.Tokenize
    Data.Json.Number
  build-depends:
    , base >=4.12 && <5
    , array-builder >=0.1 && <0.2
    , text-short
    , bytesmith >=0.1 && <0.2
    , primitive >=0.7 && <0.8
    , bytestring
    , byteslice
    , array-chunks >=0.1.1 && <0.2
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test, common
  main-is: Main.hs
  other-modules:
    Twitter1
    Twitter10
    Twitter100
  ghc-options: -Wall -O2
  build-depends:
    , QuickCheck >=2.13.1 && <2.14
    , base >=4.12.0.0 && <5
    , byteslice
    , bytestring
    , json-tokenize
    , neat-interpolation >=0.3.2
    , primitive
    , small-bytearray-builder
    , tasty >=1.2.3 && <1.3
    , tasty-hunit >=0.10.0.2 && <0.11
    , text >=1.2
    , vector

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , byteslice
    , bytestring
    , gauge
    , json-tokenize
    , neat-interpolation >=0.3.2
    , primitive
    , text >=1.2
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench, common
  main-is: Main.hs
  other-modules:
    Twitter1
    Twitter10
    Twitter100
